upgrade-gloo-edge-1-billion-req/direct-response-backend/direct-resp-envoy.yaml
# from https://www.envoyproxy.io/docs/envoy/latest/configuration/overview/examples
!ignore dynamic_sockets:
- &admin_address {address: 0.0.0.0, port_value: 9901}
- &listener_address {address: 0.0.0.0, port_value: 10000}

admin:
  address:
    socket_address: *admin_address

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: *listener_address
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                direct_response:
                  status: 200
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          request_timeout: 10s
          stream_idle_timeout: 10s
          common_http_protocol_options:
            idle_timeout: 10s
            max_connection_duration: 10s
            max_stream_duration: 10s
            max_requests_per_connection: 100048
